# agent-arena

./: .ahoy.yml  .arena-control.history  .env.contest  .gitignore  GEMINI.md  QWEN.md  README.md  TODO.md  actor.db.bak  agent-arena-config.yaml  agent-arena-test-config.yaml  arena.db.bak  error.json  error_data.json  integration-config.yaml  justfile  models  openapi.yaml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  req.json  t.json  test.json  todo.md
.cursor/rules/: libraries.mdc
.serena/: project.yml
agentarena/: __init__.py  conftest.py  server.py
agentarena/actors/: actor_container.py  app.py  models.py
agentarena/arena/: app.py  arena_container.py  models.py
agentarena/clients/: message_broker.py  test_message_broker.py
agentarena/controlpanel/: __init__.py  app.py  cli.py  clients.py  components.py  contest_view.py  controlpanel.css  dashboard_view.py  markdown_renderer.py  openapi.py  ui.py  ui_form.py
agentarena/core/: exceptions.py  test_error_handling.py
agentarena/integration/: conftest.py  test_helpers.py  test_nats.py  test_response_parsing.py
agentarena/models/: constants.py  dbbase.py  event.py  job.py  llm.py  public.py  requests.py  stats.py  validation.py
agentarena/scheduler/: app.py  scheduler_container.py
agentarena/statemachines/: contest_machine.py  contestmachine.py  ready_machine.py  request_machine.py  roundmachine.py  setup_machine.py  setupmachine.py  test_contestmachine.py  test_requestmachine.py  test_roundmachine.py  test_setupmachine.py
agentarena/templates/: contest.md.j2
agentarena/util/: files.py  jinja_helpers.py  response_parsers.py  test_jinja_helpers.py  test_response_parsers.py
docs/: architecture.md  async-requests.md  base-idea.md  contest-state-machines.md  lab-notes.md  mastra-examples.md  messages.md  model-diagrams.md  model_service.md  partipant-ready-machine.md  pydantic_models_plan.md  sqlmodel-migration-plan.md  state-machine.md
etc/: cheapest-models.sql  commandjob.json  llmmodel.sql  llmmodelprice.sql  llmmodelstats.sql  reset.sql  words.csv
etc/agent-arena/: Add Agent.bru  List Agents.bru
etc/bruno/: Agent Add.bru  Agent List.bru  Agent Update.bru  Agent by ID.bru  Agent delete by id.bru  Arena Add.bru  Arena List.bru  Arena Update.bru  Arena by ID.bru  Arena delete by id.bru  Contest Add.bru  Contest List.bru  Contest Start.bru  Contest Update.bru  Contest by ID.bru  Contest delete by id.bru  Delete agent by id.bru  Feature Create.bru  Feature List.bru  Get Agent by ID.bru  List Agents.bru  Make Request Job OK.bru  Make Request Job internal.bru  Make Request Job.bru  RoundStats Add.bru  RoundStats List.bru  (+13 more)
frontend/: LICENSE  README.md  package.json  pnpm-lock.yaml
notebooks/: experiments.ipynb  llm.ipynb
scripts/: agentarena.actor  agentarena.arena  agentarena.control  agentarena.controlpanel  agentarena.scheduler  extract_data.py  load_fixtures.py  temp.json
src/: config.ts  logging.ts  test_model_service.py  test_models.py  test_state_machines.py
(+341 files in other folders)
