[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentarena"
version = "0.1.0"
description = "A system that orchestrates contests between AI agents"
readme = "README.md"
requires-python = ">=3.11.11"
license = "MIT"
authors = [
    {name = "Bruce Kroeze", email = "bkroeze@gmail.com"}
]
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn>=0.21.1",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.24.0",
    "llm>=0.26",
    "sqlite-utils",
    "structlog>=25.3.0",
    "python-ulid[pydantic]",
    "dependency-injector>=4.46.0",
    "python-statemachine>=2.5.0",
    "asyncio>=3.4.3",
    "apscheduler>=3.11.0",
    "rich",
    "better-exceptions>=0.3.3",
    "asgi-correlation-id>=4.3.4",
    "sqlmodel>=0.0.24",
    "pyyaml",
    "jinja2>=3.1.6",
    "llm-openrouter",
    "prompt_toolkit",
    "requests",
    "nats-py",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-env>=1.1.5",
    "pytest-asyncio>=0.26.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.2.0",
    "flake8>=6.0.0",
    "typer>=0.15.3",
    "pytest-httpx>=0.35.0",
    "testcontainers>=4.10.0",
]

[tool.setuptools]
package-dir = {"" = "."}
packages = ["agentarena"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_default_fixture_loop_scope = "function"
